Added leftmost and rightmost set calculation

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -1,4 +1,4 @@
-all: tokenize productionParsing gramparsing
+all: tokenize productionParsing gramparsing lrm
 
 tokenize: tokenize.c
 	gcc -g -o tokenize -I../ -L../ -lspp tokenize.c
@@ -9,5 +9,8 @@ productionParsing: productionParsing.c
 gramparsing: gramparsing.c
 	gcc -g -o gramparsing -I../ -L../ -lspp gramparsing.c
 
+lrm: lrm.c
+	gcc -g -o lrm -I../ -L../ -lspp lrm.c
+
 clean:
-	rm -rf tokenize productionParsing gramparsing
+	rm -rf tokenize productionParsing gramparsing lrm
